Fix badge flow on mobile

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -330,7 +330,7 @@
           .button__content {
             height: auto;
             span {
-              display: block;
+              // display: block;
               width: 100%;
               text-overflow: ellipsis;
               white-space: nowrap;
